--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@hexlet/code",
   "type": "module",
   "version": "1.0.0",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "description": "[![Actions Status](https://github.com/Filchanskiy/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/Filchanskiy/frontend-project-lvl1/actions)",
   "main": "index.js",
   "scripts": {
@@ -16,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/Filchanskiy/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/Filchanskiy/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/Filchanskiy/frontend-project-lvl1#readme",
+  "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
+  }
 }
