--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
