--- a/.github/workflows/testBrain.yml
+++ b/.github/workflows/testBrain.yml
@@ -1,10 +1,8 @@
 name: Brain-Games CI
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  - push
+  - pull_request
 
 jobs:
   build:
@@ -12,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.14.2]
+        node-version: [12.x]
 
     steps:
       - uses: actions/checkout@v2
