--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,6 @@
 env:
-  browser: true
   es2021: true
+  node: true
 extends:
   - airbnb-base
 parserOptions:
@@ -9,6 +9,6 @@ parserOptions:
 rules:
   no-console: 0
   import/extensions:
-  - error
-  -ignorePackages
-  -js: always
+    - error
+    - ignorePackages
+    - js: always
